spring-petclinic-api-gateway/.tanzu/config/httproute-spring-petclinic-api-gateway.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  annotations:
    apps.tanzu.vmware.com/promotable: ""
    apps.tanzu.vmware.com/promote-group: ContainerApp/spring-petclinic-api-gateway
  name: spring-petclinic-api-gateway-http-route
spec:
  parentRefs:
  - group: networking.tanzu.vmware.com
    kind: Entrypoint
    name: spring-petclinic-api-gateway
  rules:
  - backendRefs:
    - kind: Service
      name: spring-petclinic-api-gateway
      port: 8080
